objects/Recurring_Business_Information__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Location_Bidding_unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Location Bidding unit</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Businesses</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Businesses Information (Account End User)</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <label>Channel Class Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <label>Channel Class Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level1__c</fullName>
        <label>Industry Usage Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level2__c</fullName>
        <label>Industry Usage Level2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage_Level3__c</fullName>
        <label>Industry Usage Level3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Primary_PG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Primary PG</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RB_Information_Redirection__c</fullName>
        <formula>HYPERLINK(&apos;/apex/RBInformationForAccountPage?Id=&apos;+Id,  Recurring_Business__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_For_Cancellation__c</fullName>
        <label>Reason For Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled by ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Political decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error/as duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring business modification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Business_Information_Name__c</fullName>
        <description>RB R3.0</description>
        <label>RB Information Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Business</label>
        <referenceTo>Recurring_Business__c</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recurring Businesses Information</relationshipLabel>
        <relationshipName>Recurring_Businesses_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Recurring Business Information</label>
    <nameField>
        <displayFormat>RBInfo-{0000000}</displayFormat>
        <label>Recurring Business Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Businesses Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>